# hazel

./: .gitignore  Cargo.toml  README.md  Trunk.toml  styles.css
.github/workflows/: rust.yml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: abntex2.latex
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tests/: mod.rs
