[package]
name = "hazel"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
yewdux = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Selection", "Range"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1.7"
gloo-events = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }

[workspace]
members = ["src-tauri"]
